@@ -1,9 +1,12 @@
-PRJ_VER=0.5.0.99
+PRJ_VER=0.5.99
 SUMMARY=
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=684107
 [Changes]
-- New: Zanata support
+- New Macro: USE_ZANATA() - Zanata support.
+- New Macro: USE_GETTEXT() - Gettext support.
+  This macro merges GETTEXT_CREATE_POT and GETTEXT_CREATE_TRANSLATIONS,
+  to simplified the usage and make the macro names more consistent.
 - Clean up Modules: No unrelated files under Modules/
 - Removed debug message of _cmake_uninstall_in, CMAKE_MAJOR_VERSION,
   CMAKE_MINOR_VERSION. CMAKE_PATCH_VERSION
